--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@typescript-ddd/generators",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "rollup -c",
+    "build": "rollup -c && npx copyfiles -f ./src/templates/**/*.hbs dist/templates",
     "prepare": "npm run build",
     "test": "jest",
     "publish": "npm version patch --no-git-tag-version && npm publish --access public"
@@ -19,6 +19,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^22.7.9",
     "@types/pluralize": "^0.0.33",
+    "copyfiles": "^2.4.1",
     "jest": "^29.7.0",
     "rimraf": "^6.0.1",
     "rollup": "4.24.0",
