--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@typescript-ddd/generators",
-  "version": "0.1.3",
-  "main": "dist/index.js",
+  "version": "0.1.4",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
   "files": [
@@ -23,6 +24,7 @@
     "jest": "^29.7.0",
     "rimraf": "^6.0.1",
     "rollup": "4.24.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-typescript2": "0.36.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.6.3"
